--- a/experience.html
+++ b/experience.html
@@ -51,6 +51,8 @@
         <div class ="row">
           <div class="col-sm-6 banner-image">
             <img src="/images/EY.png" class="img-responsive" height= "75" width= "75">
+          </div>
+          <div class="text">
             <p>Personal Website</p>
           </div>
         </div>
