--- a/experience.html
+++ b/experience.html
@@ -45,6 +45,8 @@
 
     <img class="img-banner" src="/images/experiences.png" alt="mmtuts banner" class="img-responsive">
     
+    <hr class="experience-horizontal-line"/>
+
 
     <div class="container container-custom">
       <div class="row">
@@ -78,30 +80,12 @@
             <p class="experience-item">TravisCI</p>
             <p class="experience-item">Git</p>
           </div>
-          <p style="display: none;">Continued working remotely while attending school. Developed production features using React, Ruby on Rails and leveraged tools such as New Relic to identify bottlenecks in the application.</p>
         </div>
       </div>
 
+      <hr class="experience-horizontal-line"/>
 
 
-    <div class="container">
-      <div class ="row">
-
-        <div class="col-sm-6 banner-image">
-          <img src="/images/EY.png" class="img-responsive">
-        </div>
-
-        <div class="col-sm-6 banner-info">
-          <h1>Welcome To</h1>
-          <p class="big-text">Hisham Iqbal's</p>
-          <p>Personal Website</p>
-          <a class="btn btn-first" href="#">About Me</a>
-          <a class="btn btn-second" href="#">Schedule Me</a>
-        </div>
-        
-      </div>
-
-    </div>
 
 
   </header>
