--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,7 @@
             <img class="company-logo" src="/images/EY.png"/>
           </div>
         </div>
-        <div class="col-sm-6 banner-info">
+        <div class="col-lg-4 col-sm-12">
           <h5 class="experience-header">Software Engineer Intern</h5>
           <div class="experience-details-container">
           <p class="experience-details-item">Custom Ink</p> 
