--- a/experience.html
+++ b/experience.html
@@ -64,6 +64,7 @@
           </div>
         </div>
         <div class="col-lg-6 col-sm-12">
+          <p>• Analyzed over 150,000 fields of data through SQL and created a client serving dashboard on Tableau </p>
           <h6>Stack:</h6>
           <div class="experience-items-container">
             <p class="experience-item">Javascript</p>
