--- a/experience.html
+++ b/experience.html
@@ -58,35 +58,67 @@
         <div class="col-lg-4 col-sm-12">
           <h5 class="experience-header">Software Engineer Intern</h5>
           <div class="experience-details-container">
-          <p class="experience-details-item">Custom Ink</p> 
-          <p class="experience-details-item">Aug 2019 - Mar 2020</p>
-          <p class="experience-details-item">🌎 Remote</p> 
+          <p class="experience-details-item">Ernst & Young</p> 
+          <p class="experience-details-item">May 2019 - Aug 2019</p>
+          <p class="experience-details-item">Tysons, VA</p> 
           </div>
         </div>
         <div class="col-lg-6 col-sm-12">
           <p>• Analyzed over 150,000 fields of data through SQL and created a client serving dashboard on Tableau </p>
-          <h6>Stack:</h6>
-          <div class="experience-items-container">
-            <p class="experience-item">Javascript</p>
-            <p class="experience-item">Ruby</p>
-            <p class="experience-item">React</p>
-            <p class="experience-item">Ruby on Rails</p>
-            <p class="experience-item">PostgreSQL</p>
-          </div>
-          <h6>Tools/Frameworks:</h6>
-          <div class="experience-items-container">
-            <p class="experience-item">New Relic</p>
-            <p class="experience-item">SendGrid API</p>
-            <p class="experience-item">Postman</p>
-            <p class="experience-item">TravisCI</p>
-            <p class="experience-item">Git</p>
-          </div>
+          <p>• Researched and developed a Power BI technical tutorial for 20+ executives using T&E data  </p>
+          <p>• Located over 120 hours of falsified training modules completed by employees through Excel and SQL  </p>
         </div>
       </div>
 
       <hr class="experience-horizontal-line"/>
 
+      <div class="container container-custom">
+        <div class="row">
+          <div class="col-lg-2 col-sm-12">
+            <div class="company-logo-container">
+              <img class="company-logo" src="/images/DOT.jpg"/>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-12">
+            <h5 class="experience-header">Data Analyst Summer Intern</h5>
+            <div class="experience-details-container">
+            <p class="experience-details-item">U.S. Department of Transportation</p> 
+            <p class="experience-details-item">May 2018 - Aug 2018</p>
+            <p class="experience-details-item">Washington, DC</p> 
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-12">
+            <p>• Saved over $120,000 for the DOT by consolidating SAS systems by NHTSA and FRA</p>
+            <p>• Implemented automated system to introduce consumers filing their own automobile safety hazards</p>
+            <p>• Created distributive models using AWS Sagemaker to compare automobile complaints filed to the DOT</p>
+          </div>
+        </div>
+  
+        <hr class="experience-horizontal-line"/>
 
+        <div class="container container-custom">
+          <div class="row">
+            <div class="col-lg-2 col-sm-12">
+              <div class="company-logo-container">
+                <img class="company-logo" src="/images/Worth.png"/>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+              <h5 class="experience-header">Back-End Operations Intern</h5>
+              <div class="experience-details-container">
+              <p class="experience-details-item">Worth Home Products</p> 
+              <p class="experience-details-item">May 2017 - Aug 2017</p>
+              <p class="experience-details-item">Houston, TX</p> 
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <p>• Increased retail sales by 27% through automating the backend code and processes</p>
+              <p>• Instituted a social media advertising system that analyzes the target market interaction with the company</p>
+              <p>• Increased efficiency in sales through Quickbooks and IDE, resulting in a gross increase in profit by $1,560 in one month</p>
+            </div>
+          </div>
+    
+          <hr class="experience-horizontal-line"/>
 
 
   </header>
