--- a/index.html
+++ b/index.html
@@ -19,52 +19,78 @@
 
 
 <body>
-  <header class ="header">
-    <nav class ="navbar navbar-style">
-      <div class ="containter">
-        <div class="navbar-header">
-          <button type="button" class ="navbar-toggle" data-toggle="collapse" data-target="">
-            <span class ="icon-bar"></span>
-            <span class ="icon-bar"></span>
-            <span class ="icon-bar"></span>
-          </button>
-          <a href =""><img class="logo" src = "images/icon.png"></a>
-        </div>
 
-        <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/experience">Experiences</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/contact">Contact</a></li>
 
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav navbar-nav-default">
+          <li class="nav-item active">
+            <a class="nav-link nav-link-custom-active" href="index.html">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experience.html">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Portfolio</a>
+          </li>
         </ul>
-
       </div>
     </nav>
-
-    <img class="img-banner" src="/images/background.png" alt="mmtuts banner" class="img-responsive">
-    
-
-      <div class="container">
-        <div class ="row">
-          <div class="col-sm-6 banner-info">
-            <h1>Welcome To</h1>
-            <p class="big-text">Hisham Iqbal's</p>
-            <p>Personal Website</p>
-            <a class="btn btn-first" href="#">About Me</a>
-            <a class="btn btn-second" href="#">Schedule Me</a>
+    <div class="container container-custom">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <div id="about-me-image-container">
+            <img id="about-me-image" src="./assets/profile-image.jpg" />
           </div>
-          
-          <div class="col-sm-6 banner-image">
-            <img src="/images/coffee.jpg" class="img-responsive">
+        </div>
+        <div id="about-me-parragraph-container" class="col-lg-6 col-sm-12">
+          <h5 id="about-me-heading">Hi, I'm Guillermo 👋</h5>
+          <p id="about-me-parragraph">I'm currently studying computer science at the <span class="about-me-word">University of Virginia</span> and interested in developing my skills as full-stack software engineer by solving challeging problems.</p>
+          <div id="about-me-social-logos-container">
+            <a href="https://twitter.com/guillermo_saave" target="_blank">
+              <img class="about-me-social-logo" src="./assets/twitter-logo.png"/>
+            </a>
+            <a href="https://github.com/guillermocoding" target="_blank">
+              <img class="about-me-social-logo" src="./assets/github-logo.png"/>
+            </a>
+            <a href="https://www.producthunt.com/@guillermo_saavedra" target="_blank">
+              <img class="about-me-social-logo" src="./assets/product-hunt-logo.png"/>
+            </a>
+            <a href="https://www.linkedin.com/in/guillermosaavedradiaz/" target="_blank">
+              <img class="about-me-social-logo" src="./assets/linkedin-logo.png"/>
+            </a>
           </div>
-
         </div>
       </div>
-
-
-  </header>
+      <hr id="about-me-horizontal-line"/>
+      <div id="contact-form-container">
+        <h5 id="contact-form-header"> Contact me 💬</h5>
+        <form id="contact-form" method="POST" action="https://formspree.io/xrgagpqa">
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Name</label>
+            <input name="name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email</label>
+            <input name="name" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Message</label>
+            <textarea name="message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <input id="contact-form-button" type="submit" value="Submit"/>
+        </form>
+      </div>
+    </div>
+    <div id="footer-container">
+      <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
+    </div>
+  </body>
 </body>
 </html>
 
