--- a/index.html
+++ b/index.html
@@ -19,24 +19,52 @@
 
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav navbar-nav-default">
-        <li class="nav-item active">
-          <a class="nav-link nav-link-custom-active" href="index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="experience.html">Experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">Portfolio</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <header class ="header">
+    <nav class ="navbar navbar-style">
+      <div class ="containter">
+        <div class="navbar-header">
+          <button type="button" class ="navbar-toggle" data-toggle="collapse" data-target="">
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+          </button>
+          <a href =""><img class="logo" src = "images/icon.png"></a>
+        </div>
+
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/experience">Experiences</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/contact">Contact</a></li>
+
+        </ul>
+
+      </div>
+    </nav>
+
+    <img class="img-banner" src="/images/background.png" alt="mmtuts banner" class="img-responsive">
+    
+
+      <div class="container">
+        <div class ="row">
+          <div class="col-sm-6 banner-info">
+            <h1>Welcome To</h1>
+            <p class="big-text">Hisham Iqbal's</p>
+            <p>Personal Website</p>
+            <a class="btn btn-first" href="#">About Me</a>
+            <a class="btn btn-second" href="#">Schedule Me</a>
+          </div>
+          
+          <div class="col-sm-6 banner-image">
+            <img src="/images/coffee.jpg" class="img-responsive">
+          </div>
+
+        </div>
+      </div>
+
+
+  </header>
   <div class="container container-custom">
     <div class="row">
       <div class="col-lg-6 col-sm-12">
