--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="row">
       <div class="col-lg-6 col-sm-12">
         <div id="about-me-image-container">
-          <img id="about-me-image" src="/images/coffee.jpg" />
+          <img id="about-me-image" src="/images/hisham.jpg" />
         </div>
       </div>
       <div id="about-me-parragraph-container" class="col-lg-6 col-sm-12">
