--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 
       <div class="container">
         <div class ="row">
-          <div class="col-sm-6 banner-info">
-            <h1>Welcome To</h1>
+          <div class="col-lg-6 col-sm-12">
+            <h1>Hello, I'm Hisham! 👋 </h1>
             <p class="big-text">Hisham Iqbal's</p>
             <p>Personal Website</p>
             <a class="btn btn-first" href="#">About Me</a>
             <a class="btn btn-second" href="#">Schedule Me</a>
           </div>
           
-          <div class="col-sm-6 banner-image">
-            <img src="/images/coffee.jpg" class="img-responsive">
+          <div id="about-me-image-container">
+            <img id="about-me-image" src="/images/hisham.jpg" />
           </div>
 
         </div>
