--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <img id="about-me-image" src="/images/hisham.jpg" />
         </div>
       </div>
-      <div id="about-me-parragraph-container" class="col-lg-6 col-sm-12">
-        <h5 id="about-me-heading">Hi, I'm Guillermo 👋</h5>
-        <p id="about-me-parragraph">I'm currently studying computer science at the <span class="about-me-word">University of Virginia</span> and interested in developing my skills as full-stack software engineer by solving challeging problems.</p>
+      <div id="about-me-parragraph-container" class="col-lg-6 col-lg-12">
+        <h5 id="about-me-heading">Hello, I'm Hisham!</h5>
+        <p id="about-me-parragraph">I'm a graduating student from the <span class="about-me-word">University of Virginia</span> studying Computer Science and Economics. </p>
         <div id="about-me-social-logos-container">
           <a href="https://twitter.com/guillermo_saave" target="_blank">
             <img class="about-me-social-logo" src="./assets/twitter-logo.png"/>
