--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
   </div>
   <div id="footer-container">
-    <p id="footer-content">&copy; 2020 Copyright Guillermo Saavedra</p>
+    <p id="footer-content">&copy; Hisham Iqbal 2020 Copyright</p>
   </div>
 </body>
 </html>
