--- a/experience.html
+++ b/experience.html
@@ -122,6 +122,9 @@
 
 
   </header>
+  <div id="footer-container">
+    <p id="footer-content">&copy; Hisham Iqbal 2020 Copyright</p>
+  </div>
 </body>
 </html>
 
