--- a/blog.html
+++ b/blog.html
@@ -1,51 +1,74 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Hisham Iqbal</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body style="background-color:rgba(146, 163, 161, 0.836);">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-	        		<li><a href="/experience">Experience</a></li>
-                    <li><a href="/blog">Blog</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section id="hero">
-                <div class="section-inner">
-                    <h1>My Musings</h1>
-                    <hr>
-                </div>
-            </section>
-            <section id="embed">
-                <div id="retainable-rss-embed" 
-    data-rss="https://medium.com/feed/@hishamiqbal" 
-     data-maxcols="4" 
-     data-layout="slider" 
-     data-poststyle="modal" 
-     data-readmore="Read the rest" 
-     data-buttonclass="btn btn-primary" 
-     data-offset="-200">&#160;</div>
-            </section>
-        </main>
-        <hr>
-        <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
-        </body>
-        <footer id = "footer">
-            © Copyright Mohammad Hisham Iqbal, 2020
-        </footer>
+<head>
+  <meta charset="utf-8">
+  <title>
+    Hisham Iqbal
+  </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel= "stylesheet" type="text/css">
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+
+
+<body>
+  <header class ="header">
+    <nav class ="navbar navbar-style">
+      <div class ="containter">
+        <div class="navbar-header">
+          <button type="button" class ="navbar-toggle" data-toggle="collapse" data-target="">
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+            <span class ="icon-bar"></span>
+          </button>
+          <a href =""><img class="logo" src = "images/icon.png"></a>
+        </div>
+
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/experience">Experiences</a></li>
+          <li><a href="/blog">Blog</a></li>
+
+        </ul>
+
+      </div>
+    </nav>
+
+    <img class="img-banner" src="/images/background.png" alt="mmtuts banner" class="img-responsive">
+  </header>
+
+ 
+
+
+ 
+  <div class="container container-custom">
+    <section id="embed">
+        <div id="retainable-rss-embed" 
+            data-rss="https://medium.com/feed/@hishamiqbal" 
+            data-maxcols="4" 
+            data-layout="slider" 
+            data-poststyle="modal" 
+            data-readmore="Read the rest" 
+            data-buttonclass="btn btn-primary" 
+            data-offset="-200">&#160;
+        </div>
+    </section>
+</main>
+<hr>
+<script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
+  </div>
+  <div id="footer-container">
+    <p id="footer-content">&copy; Hisham Iqbal 2020 Copyright</p>
+  </div>
+</body>
 </html>
 
 
 
-header
-{
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background.jpg);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-}
