--- a/experience.html
+++ b/experience.html
@@ -34,9 +34,7 @@
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
           <li><a href="/experience">Experiences</a></li>
-          <li><a href="/projects">Projects</a></li>
           <li><a href="/blog">Blog</a></li>
-          <li><a href="/contact">Contact</a></li>
 
         </ul>
 
@@ -56,7 +54,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-12">
-          <h5 class="experience-header">Software Engineer Intern</h5>
+          <h5 class="experience-header">Forensic Analyst Intern</h5>
           <div class="experience-details-container">
           <p class="experience-details-item">Ernst & Young</p> 
           <p class="experience-details-item">May 2019 - Aug 2019</p>
