--- a/index.html
+++ b/index.html
@@ -34,16 +34,14 @@
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
           <li><a href="/experience">Experiences</a></li>
-          <li><a href="/projects">Projects</a></li>
           <li><a href="/blog">Blog</a></li>
-          <li><a href="/contact">Contact</a></li>
 
         </ul>
 
       </div>
     </nav>
 
-    <img class="img-banner" src="/images/experiences.png" alt="mmtuts banner" class="img-responsive">
+    <img class="img-banner" src="/images/background.png" alt="mmtuts banner" class="img-responsive">
   </header>
 
  
