--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </nav>
 
-    <img class="img-banner" src="/images/background.png" alt="mmtuts banner" class="img-responsive">
+    <img class="img-banner" src="/images/experiences.png" alt="mmtuts banner" class="img-responsive">
   </header>
 
  
