--- a/index.html
+++ b/index.html
@@ -59,17 +59,20 @@
         <h5 id="about-me-heading">Hello, I'm Hisham!</h5>
         <p id="about-me-parragraph">I'm a graduating student from the <span class="about-me-word">University of Virginia</span> studying Computer Science and Economics. </p>
         <div id="about-me-social-logos-container">
-          <a href="https://twitter.com/guillermo_saave" target="_blank">
-            <img class="about-me-social-logo" src="./assets/twitter-logo.png"/>
+          <a href="https://twitter.com/hisgoesham" target="_blank">
+            <img class="about-me-social-logo" src="/images/twitter.png"/>
           </a>
-          <a href="https://github.com/guillermocoding" target="_blank">
-            <img class="about-me-social-logo" src="./assets/github-logo.png"/>
+          <a href="https://github.com/HishamIqbal" target="_blank">
+            <img class="about-me-social-logo" src="/images/github.svg"/>
           </a>
-          <a href="https://www.producthunt.com/@guillermo_saavedra" target="_blank">
-            <img class="about-me-social-logo" src="./assets/product-hunt-logo.png"/>
+          <a href="mailto:iqbal@virginia.edu" target="_blank">
+            <img class="about-me-social-logo" src="/images/gmail.png"/>
           </a>
-          <a href="https://www.linkedin.com/in/guillermosaavedradiaz/" target="_blank">
-            <img class="about-me-social-logo" src="./assets/linkedin-logo.png"/>
+          <a href="https://www.linkedin.com/in/mohammad-hisham-iqbal-a3b955129/" target="_blank">
+            <img class="about-me-social-logo" src="/images/linkedin.png"/>
+          </a>
+          <a href="https://www.facebook.com/HisGoesHam?ref=bookmarks" target="_blank">
+            <img class="about-me-social-logo" src="/images/facebook.png"/>
           </a>
         </div>
       </div>
