--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </div>
     <hr id="about-me-horizontal-line"/>
     <div id="contact-form-container">
-      <h5 id="contact-form-header"> Contact me 💬</h5>
-      <form id="contact-form" method="POST" action="https://formspree.io/xrgagpqa">
+      <h5 id="contact-form-header"> Contact me!</h5>
+      <form id="contact-form" form action="https://formspree.io/myynygdg" method="POST>
         <div class="form-group">
           <label for="exampleFormControlInput1">Name</label>
           <input name="name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
