--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>
+    <link rel="shortcut icon" href="/images/icon.png" />
     Hisham Iqbal
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,7 +81,7 @@
     <hr id="about-me-horizontal-line"/>
     <div id="contact-form-container">
       <h5 id="contact-form-header"> Contact me!</h5>
-      <form id="contact-form" form action="https://formspree.io/myynygdg" method="POST>
+      <form id="contact-form" form action="https://formspree.io/myynygdg" method="POST">
         <div class="form-group">
           <label for="exampleFormControlInput1">Name</label>
           <input name="name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
