--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
   <meta charset="utf-8">
   <title>
-    <link rel="shortcut icon" href="/images/icon.png" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
     Hisham Iqbal
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
