--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>
+  <head>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    Hisham Iqbal
-  </title>
+   <title>Hisham Iqbal</title>
+  </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel= "stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
