--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <head>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <title>
    <title>Hisham Iqbal</title>
-  </head>
+   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel= "stylesheet" type="text/css">
   <!-- Latest compiled and minified CSS -->
