--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>
-   <title></title>Hisham Iqbal</title>
+   Hisham Iqbal
    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
