--- a/blog.html
+++ b/blog.html
@@ -1,75 +1,41 @@
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>
-    <link rel="shortcut icon" href="/images/icon.png" />
-    Hisham Iqbal
-  </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel= "stylesheet" type="text/css">
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<div class="header">
+  <h2>Blog Name</h2>
+</div>
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-
-
-
-<body>
-  <header class ="header">
-    <nav class ="navbar navbar-style">
-      <div class ="containter">
-        <div class="navbar-header">
-          <button type="button" class ="navbar-toggle" data-toggle="collapse" data-target="">
-            <span class ="icon-bar"></span>
-            <span class ="icon-bar"></span>
-            <span class ="icon-bar"></span>
-          </button>
-          <a href =""><img class="logo" src = "images/icon.png"></a>
-        </div>
-
-        <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/experience">Experiences</a></li>
-          <li><a href="/blog">Blog</a></li>
-
-        </ul>
-
-      </div>
-    </nav>
-
-    <img class="img-banner" src="/images/blog.png" alt="mmtuts banner" class="img-responsive">
-  </header>
-
- 
-
-
- 
-  <div class="container container-custom">
-    <section id="embed">
-        <div id="retainable-rss-embed" 
-            data-rss="https://medium.com/feed/@hishamiqbal" 
-            data-maxcols="4" 
-            data-layout="slider" 
-            data-poststyle="modal" 
-            data-readmore="Read the rest" 
-            data-buttonclass="btn btn-primary" 
-            data-offset="-200">&#160;
-        </div>
-    </section>
-</main>
-<hr>
-<script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text..</p>
+    </div>
   </div>
-  <div id="footer-container">
-    <p id="footer-content">&copy; Hisham Iqbal 2020 Copyright</p>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="fakeimg" style="height:100px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+      <h3>Popular Post</h3>
+      <div class="fakeimg">Image</div><br>
+      <div class="fakeimg">Image</div><br>
+      <div class="fakeimg">Image</div>
+    </div>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>Some text..</p>
+    </div>
   </div>
-</body>
-</html>
+</div>
 
-
-
+<div class="footer">
+  <h2>Footer</h2>
+</div>
