--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body, html {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
@@ -48,9 +48,8 @@ body, html {
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:50px">I am John Doe</h1>
-    <p>And I'm a Photographer</p>
-    <button>Hire me</button>
+    <h1 style="font-size:50px">Hisham Iqbal</h1>
+    <p>Welcome to my story</p>
   </div>
 </div>
 
