--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 <style>
 body, html {
   height: 100%;
@@ -42,9 +44,48 @@ body, html {
   background-color: #555;
   color: white;
 }
+
+
+/*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
+
+.topnav {
+  overflow: hidden;
+}
+
+.topnav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+
 </style>
 </head>
 <body>
+
+<!----------------------------------------------------------------- top menu html---------------------------------------------------------->
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+<!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
 <div class="hero-image">
   <div class="hero-text">
