--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@ body, html {
   color: white;
 }
 
+/*----------------------------------------------------------------- footer css---------------------------------------------------------------*/
+
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
+}
 
 </style>
 </head>
@@ -95,6 +107,13 @@ body, html {
 </div>
 
 <p>Page Content..</p>
+
+<!----------------------------------------------------------------- hero html---------------------------------------------------------->
+
+
+<div class="footer">
+  <p>Footer</p>
+</div>
 
 </body>
 </html>
