--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ body, html {
 <!----------------------------------------------------------------- top menu html---------------------------------------------------------->
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a class="active" href="/home">Home</a>
+  <a href="/blog">Blog</a>
+  <a href="#contact">Professional</a>
   <a href="#about">About</a>
 </div>
 
