--- a/blog.html
+++ b/blog.html
@@ -91,8 +91,8 @@ body, html {
 <!----------------------------------------------------------------- top menu html---------------------------------------------------------->
 
 <div class="topnav">
-  <a class="active" href="/home">Home</a>
-  <a href="/blog">Blog</a>
+  <a href="/home">Home</a>
+  <a class="active" href="/blog">Blog</a>
   <a href="#contact">Professional</a>
   <a href="#about">About</a>
 </div>
