--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body, html {
 
 <div class="topnav">
   <a class="active" href="/home">Home</a>
-  <a href="/blog">Blog</a>
+  <a href="blog.html">Blog</a>
   <a href="#contact">Professional</a>
   <a href="#about">About</a>
 </div>
