--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body, html {
 <!----------------------------------------------------------------- top menu html---------------------------------------------------------->
 
 <div class="topnav">
-  <a class="active" href="">Home</a>
+  <a class="active" href="/">Home</a>
   <a href="/blog">Blog</a>
   <a href="#contact">Professional</a>
   <a href="#about">About</a>
