--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body, html {
 <div class="topnav">
   <a class="active" href="/">Home</a>
   <a href="/blog">Blog</a>
-  <a href="#contact">Professional</a>
+  <a href="/experience.html">Professional</a>
   <a href="#about">About</a>
 </div>
 
