--- a/blog.html
+++ b/blog.html
@@ -91,9 +91,9 @@ body, html {
 <!----------------------------------------------------------------- top menu html---------------------------------------------------------->
 
 <div class="topnav">
-  <a href="/home">Home</a>
+  <a href="/">Home</a>
   <a class="active" href="/blog">Blog</a>
-  <a href="#contact">Professional</a>
+  <a href="/experience">Professional</a>
   <a href="#about">About</a>
 </div>
 
