--- a/blog.html
+++ b/blog.html
@@ -93,8 +93,8 @@ body, html {
 <div class="topnav">
   <a href="/">Home</a>
   <a class="active" href="/blog">Blog</a>
-  <a href="/experience">Professional</a>
-  <a href="#about">About</a>
+  <a href="/experience">Experience</a>
+  <a href="/about">About</a>
 </div>
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
