--- a/experience.html
+++ b/experience.html
@@ -1,131 +1,145 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>
-    <link rel="shortcut icon" href="/images/icon.png" />
-    Hisham Iqbal
-  </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel= "stylesheet" type="text/css">
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
+
+
+/*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
+
+.topnav {
+  overflow: hidden;
+}
+
+.topnav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/*----------------------------------------------------------------- footer css---------------------------------------------------------------*/
+
+
+.footer {
+   position: fixed, absolute;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
+}
+
+</style>
 </head>
-
-
-
 <body>
-  <header class ="header">
-    <nav class ="navbar navbar-style">
-      <div class ="containter">
-        <div class="navbar-header">
-          <button type="button" class ="navbar-toggle" data-toggle="collapse" data-target="">
-            <span class ="icon-bar"></span>
-            <span class ="icon-bar"></span>
-            <span class ="icon-bar"></span>
-          </button>
-          <a href =""><img class="logo" src = "images/icon.png"></a>
-        </div>
 
-        <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/experience">Experiences</a></li>
-          <li><a href="/blog">Blog</a></li>
+<!----------------------------------------------------------------- top menu html---------------------------------------------------------->
 
-        </ul>
+<div class="topnav">
+  <a  href="/">Home</a>
+  <a href="/blog">Blog</a>
+  <a class="active" href="/experience">Experience</a>
+  <a href="/about">About</a>
+</div>
 
-      </div>
-    </nav>
+<!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
-    <img class="img-banner" src="/images/experiences.png" alt="mmtuts banner" class="img-responsive">
-    
-    <hr class="experience-horizontal-line"/>
-
-
-    <div class="container container-custom">
-      <div class="row">
-        <div class="col-lg-2 col-sm-12">
-          <div class="company-logo-container">
-            <img class="company-logo" src="/images/EY.png"/>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <h5 class="experience-header">Forensic Analyst Intern</h5>
-          <div class="experience-details-container">
-          <p class="experience-details-item">Ernst & Young</p> 
-          <p class="experience-details-item">May 2019 - Aug 2019</p>
-          <p class="experience-details-item">Tysons, VA</p> 
-          </div>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <p>• Analyzed over 150,000 fields of data through SQL and created a client serving dashboard on Tableau </p>
-          <p>• Researched and developed a Power BI technical tutorial for 20+ executives using T&E data  </p>
-          <p>• Located over 120 hours of falsified training modules completed by employees through Excel and SQL  </p>
-        </div>
-      </div>
-
-      <hr class="experience-horizontal-line"/>
-
-      <div class="container container-custom">
-        <div class="row">
-          <div class="col-lg-2 col-sm-12">
-            <div class="company-logo-container">
-              <img class="company-logo" src="/images/DOT.jpg"/>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-12">
-            <h5 class="experience-header">Data Analyst Summer Intern</h5>
-            <div class="experience-details-container">
-            <p class="experience-details-item">U.S. Department of Transportation</p> 
-            <p class="experience-details-item">May 2018 - Aug 2018</p>
-            <p class="experience-details-item">Washington, DC</p> 
-            </div>
-          </div>
-          <div class="col-lg-6 col-sm-12">
-            <p>• Saved over $120,000 for the DOT by consolidating SAS systems by NHTSA and FRA</p>
-            <p>• Implemented automated system to introduce consumers filing their own automobile safety hazards</p>
-            <p>• Created distributive models using AWS Sagemaker to compare automobile complaints filed to the DOT</p>
-          </div>
-        </div>
-  
-        <hr class="experience-horizontal-line"/>
-
-        <div class="container container-custom">
-          <div class="row">
-            <div class="col-lg-2 col-sm-12">
-              <div class="company-logo-container">
-                <img class="company-logo" src="/images/Worth.png"/>
-              </div>
-            </div>
-            <div class="col-lg-4 col-sm-12">
-              <h5 class="experience-header">Back-End Operations Intern</h5>
-              <div class="experience-details-container">
-              <p class="experience-details-item">Worth Home Products</p> 
-              <p class="experience-details-item">May 2017 - Aug 2017</p>
-              <p class="experience-details-item">Houston, TX</p> 
-              </div>
-            </div>
-            <div class="col-lg-6 col-sm-12">
-              <p>• Increased retail sales by 27% through automating the backend code and processes</p>
-              <p>• Instituted a social media advertising system that analyzes the target market interaction with the company</p>
-              <p>• Increased efficiency in sales through Quickbooks and IDE, resulting in a gross increase in profit by $1,560 in one month</p>
-            </div>
-          </div>
-    
-          <hr class="experience-horizontal-line"/>
-
-
-  </header>
-  <div id="footer-container">
-    <p id="footer-content">&copy; Hisham Iqbal 2020 Copyright</p>
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">Hisham Iqbal</h1>
+    <p>Welcome to my story</p>
   </div>
+</div>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<!----------------------------------------------------------------- hero html---------------------------------------------------------->
+
+
+<div class="footer">
+  <p>Footer</p>
+</div>
+
 </body>
 </html>
-
-
-
