--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ body, html {
   color: white;
 }
 
+/*----------------------------------------------------------------- body css---------------------------------------------------------------*/
+
+
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+
 
 /*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
 
@@ -106,33 +113,9 @@ body, html {
   </div>
 </div>
 
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+<div>This is a div.</div>
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
