--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@ body, html {
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
 
-h1 {text-align: center;
-  padding-right: 30px;
-  padding-bottom: 30px;}
-p {text-align: center;
-  padding-right: 30px;
-  padding-bottom: 30px;}
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
 
 
 /*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
@@ -118,8 +115,9 @@ p {text-align: center;
 
 <br>
 
-<h1 style="font-size:110%;">>I am a Consultant.</h1>
-<p style="color:DodgerBlue;" style="font-size:120%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
+<h1 style="font-size:110%;">I am a Consultant.</h1>
+<br>
+<p style="color:DodgerBlue;"style="font-size:120%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
   is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others. 
 </p>
