--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@ body, html {
   color: white;
 }
 
+.container {
+  position: absolute;
+  margin: 20px;
+  width: auto;
+}
+
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
 
@@ -99,20 +105,24 @@ div {text-align: center;}
 
 <!----------------------------------------------------------------- top menu html---------------------------------------------------------->
 
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <a href="/blog">Blog</a>
-  <a href="/experience">Experience</a>
-  <a href="/about">About</a>
-</div>
+
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
 <div class="hero-image">
+  <div class="container">
+    <div class="topnav">
+      <a class="active" href="/">Home</a>
+      <a href="/blog">Blog</a>
+      <a href="/experience">Experience</a>
+      <a href="/about">About</a>
+    </div>
+  </div>
   <div class="hero-text">
     <h1 style="font-size:50px">Hisham Iqbal</h1>
     <p>Welcome to my story</p>
   </div>
+  
 </div>
 
 <br>
@@ -123,7 +133,7 @@ div {text-align: center;}
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
   is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others. 
 </p>
-<br>
+
 <p style="font-size:150%;"> This page will be used to update myself and the world about my life happenings. I hope to write frequently on this 
   but alas, all wishes do not come true. I have a lot of interests, endeavors and passions that I hope to share through this platform so 
   please join me on this ride!
