--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@ div {text-align: center;}
 <div class="hero-image">
   <div class="container">
     <div class="topnav">
-      <a class="active" href="/">Home</a>
-      <a href="/blog">Blog</a>
-      <a href="/experience">Experience</a>
+      <a href="/blog">Professional</a>
+      <a href="/experience">Interests</a>
       <a href="/about">About</a>
+      <a class="active" href="/">Home</a>
+      
     </div>
   </div>
   <div class="hero-text">
