--- a/about.html
+++ b/about.html
@@ -45,6 +45,11 @@ body, html {
   color: white;
 }
 
+.container {
+  position: absolute;
+  margin: 20px;
+  width: auto;
+}
 
 /*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
 
@@ -90,21 +95,24 @@ body, html {
 
 <!----------------------------------------------------------------- top menu html---------------------------------------------------------->
 
-<div class="topnav">
-  <a  href="/">Home</a>
-  <a href="/blog">Blog</a>
-  <a href="/experience">Experience</a>
-  <a class="active" href="/about">About</a>
-</div>
-
-<!----------------------------------------------------------------- hero html---------------------------------------------------------->
-
 <div class="hero-image">
+  <div class="container">
+    <div class="topnav">
+      <a href="/blog">Professional</a>
+      <a href="/experience">Interests</a>
+      <a class="active" href="/about">About</a>
+      <a href="/">Home</a>
+      
+    </div>
+  </div>
   <div class="hero-text">
     <h1 style="font-size:50px">Hisham Iqbal</h1>
     <p>Welcome to my story</p>
   </div>
+  
 </div>
+
+
 
 <p>Page Content..</p>
 
