--- a/blog.html
+++ b/blog.html
@@ -103,6 +103,7 @@ body, html {
   width: auto;
 }
 
+
 /*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
 
 .topnav {
@@ -150,10 +151,10 @@ body, html {
 <div class="hero-image">
   <div class="container">
     <div class="topnav">
-      <a class="active" href="/blog">Professional</a>
+      <a href="/blog">Professional</a>
       <a href="/experience">Interests</a>
       <a href="/about">About</a>
-      <a href="/">Home</a>
+      <a class="active" href="/">Home</a>
       
     </div>
   </div>
@@ -161,8 +162,12 @@ body, html {
     <h1 style="font-size:50px">Hisham Iqbal</h1>
     <p>Welcome to my story</p>
   </div>
+  
+</div>
 
 <!----------------------------------------------------------------- content html---------------------------------------------------------->
+
+
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
