--- a/blog.html
+++ b/blog.html
@@ -151,10 +151,10 @@ body, html {
 <div class="hero-image">
   <div class="container">
     <div class="topnav">
-      <a href="/blog">Professional</a>
+      <a class="active" href="/blog">Professional</a>
       <a href="/experience">Interests</a>
       <a href="/about">About</a>
-      <a class="active" href="/">Home</a>
+      <a href="/">Home</a>
       
     </div>
   </div>
