--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,58 @@
 
 
 <style>
+
+
+  /*----------------------------------------------------------------- blog content css---------------------------------------------------------------*/
+
+  * {
+  box-sizing: border-box;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 40%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 60%;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+   background-color: white;
+   padding: 20px;
+   margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+
+/*----------------------------------------------------------------- header css---------------------------------------------------------------*/
+
 body, html {
   height: 100%;
   margin: 0;
@@ -112,35 +164,45 @@ body, html {
   
 </div>
 
+<!----------------------------------------------------------------- content html---------------------------------------------------------->
 
 
-<p>Page Content..</p>
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <div class="fakeimg" style="height:200px;">Image</div>
+    </div>
 
-<p>Page Content..</p>
+    <div class="card">
+      <div class="fakeimg" style="height:200px;">Image</div>
+    </div>
 
-<p>Page Content..</p>
+  </div>
+  
 
-<p>Page Content..</p>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>UVA Quarantine</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <p>Some text..</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <button onclick="window.location.href='/uvaquarantine';">
+        Click Here
+      </button>
+    </div>
 
-<p>Page Content..</p>
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <p>Some text..</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
 
-<p>Page Content..</p>
+  </div>
+    
+  </div>
 
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
+</div>
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
