--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ div {text-align: center;}
   </div>
   <div class="hero-text">
     <h1 style="font-size:50px">Hisham Iqbal</h1>
-    <p>Welcome to my story</p>
+    <p>Just another mango man</p>
   </div>
   
 </div>
@@ -129,7 +129,7 @@ div {text-align: center;}
 
 <h1 style="font-size:300%;">I am a Problem Solver.</h1>
 <br>
-<p style="color:DodgerBlue;"style="font-size:300%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
+<p style="color:DodgerBlue;"style="font-size:500%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
   is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others. 
 </p>
