--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@ h1 {text-align: center; margin-right: 150px;
   margin-left: 150px;}
 p {text-align: center; margin-right: 150px;
   margin-left: 150px;}
-.p1 {text-align: center; margin-right: 150px;
-  margin-left: 150px;}
 div {text-align: center;}
 
 
@@ -133,12 +131,12 @@ div {text-align: center;}
 
 <br>
 
-<p1 style="color:DodgerBlue;"style="font-size:500%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
+<p style="font-size:150%;"> 
+  The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
-  is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others. 
-</p1>
-
-<p style="font-size:150%;"> This page will be used to update myself and the world about my life happenings. I hope to write frequently on this 
+  is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others.
+  <br>
+  This page will be used to update myself and the world about my life happenings. I hope to write frequently on this 
   but alas, all wishes do not come true. I have a lot of interests, endeavors and passions that I hope to share through this platform so 
   please join me on this ride!
 </p>
